# geospatial-skills

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/scripts/: test-universal-install.sh  validate-skill-layout.sh
.github/workflows/: ci.yaml  docs-pages.yaml  universal-install.yaml
docs/: index.md  install.md
docs/skills/: gdal.md  geoparquet-validation.md  geoparquet.md  geospatial-frontend.md  geospatial-viewers.md  index.md  tessera.md
docs/stylesheets/: extra.css
plugins/gdal/.claude-plugin/: plugin.json
plugins/gdal/skills/gdal/: SKILL.md
plugins/geoparquet-validation/.claude-plugin/: plugin.json
plugins/geoparquet-validation/skills/geoparquet-validation/: SKILL.md
plugins/geoparquet/.claude-plugin/: plugin.json
plugins/geospatial-frontend/.claude-plugin/: plugin.json
plugins/geospatial-viewers/.claude-plugin/: plugin.json
plugins/geospatial-viewers/skills/geospatial-viewers/: SKILL.md
plugins/tessera/.claude-plugin/: plugin.json
scripts/: test-universal-install.sh
skills/gdal/: SKILL.md
skills/gdal/references/: gdal-recipes.md
skills/geoparquet/: SKILL.md
skills/geoparquet-validation/references/: distribution-best-practices.md  gpio-commands.md
skills/geospatial-frontend/references/: design-system.md  user-preferences.md
skills/geospatial-viewers/: SKILL.md
skills/geospatial-viewers/references/: viewgeom.md  viewinline.md  viewtif.md
skills/tessera/: SKILL.md
skills/tessera/references/: geotessera-library.md
(+7 files in other folders)
